# sekoia-valhalla-integration

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  action_delete_catalog_rules.json  main.py  manifest.json  pyproject.toml  trigger_delete_catalog_rules.json  trigger_sync_sigma_intelligence_center.json  trigger_sync_sigma_rules_catalog.json
docs/: mapping-ecs.md  mapping-metadata.md  poc-sync-rules-catalog.md
scripts/: layer3_smoke.py
sekoia_valhalla_integration_modules/: __init__.py  client.py  ecs_field_maps.py  models.py  sekoia_client.py  sigma_mapper.py  stix.py
sekoia_valhalla_integration_modules/actions/: delete_catalog_rules.py
sekoia_valhalla_integration_modules/triggers/: delete_catalog_rules.py  sync_sigma_intelligence_center.py  sync_sigma_rules_catalog.py
tests/: test_client.py  test_delete_catalog_rules.py  test_sekoia_client.py  test_sigma_mapper.py  test_stix.py  test_sync_sigma_intelligence_center.py  test_sync_sigma_rules_catalog.py
