[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Automation Module for SekoiaValhallaIntegration"
description = ""
version = "0.0"
authors = []
package-mode = false

[tool.black]
line-length = 119
target-version = ["py311"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 119

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
sekoia-automation-sdk = "^1.23.1"
requests = "^2.34.2"
APScheduler = "^3.10"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
requests-mock = "*"

[tool.coverage.run]
omit = ["tests/*", "main.py"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = '''
  --strict-markers
  --tb=short
  --cov=sekoia_valhalla_integration_modules
  --cov-branch
  --cache-clear
  --cov-report=html
  --cov-report=term-missing:skip-covered
  --cov-fail-under=5
  --capture=sys
'''
